--- a/style.css
+++ b/style.css
@@ -5,158 +5,53 @@ body {
     margin: 0;
     padding: 0;
 }
-
-header {
-    width: 100vw;
-    height: 100vh;
-    background: url(header_bg.webp);
-    background-size: cover;
-    display: flex;
-}
-
-.header_left {
-    width: 65%;
-    height: 100%;
-    font-size: 3vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    padding: 0 5vw;
-    box-sizing: border-box;
-    text-align: right;
-}
-
-.header_left p {
-    font-size: 0.5em;
-}
-
-.bio {
-    width: 60%;
-}
-
-
-.header_right {
-    width: 35%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10vw;
-}
-
-.header_btn {
-    cursor: pointer;
-}
-
-.header_btn:hover {
-    transform: scale(1.05);
-}
-
-main {
-    width: 100vw;
-    height: auto;
-}
-
-section {
+header{
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 6vw;
-    box-sizing: border-box;
-    min-height: 50vh;
+    padding: 30px 0;
 }
-
-section h1 {
-    font-size: 4em;
-}
-
-.section_row {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.section_item {
-    height: 10vw;
-    margin: 0 4em 4em 4em;
-}
-
-.section_item img {
-    height: 100%;
-}
-
-
-.projects {
-    color: white;
-    background: black;
-}
-
-.github:hover {
-    transform: scale(1.05);
-    cursor: pointer;
-}
-
-footer {
-    width: 100vw;
-    height: 100px;
-    position: relative;
-    background-image: url(footer_bg.png);
-    background-size: cover;
-    background-position: center;
-}
-
-
-.footer_content {
-    width: 100%;
-    height: 100%;
-    backdrop-filter: brightness(50%);
-    -webkit-backdrop-filter: brightness(50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-}
-
-
-
-.header {
-    height: 80px;
-}
-.header-elements {
+.header-elements{
     display: flex;
     flex-direction: row;
-    width: 70%;
     column-gap: 50px;
-    padding: 30px 15%;
-    justify-content: flex-start;
+    width: 1440px;
+    margin: 0 auto;
 }
-.header-element {
+.header-element{
     font-size: 20px;
-    font-weight: 400;
     text-decoration: underline;
-    cursor: pointer;
+    color: darkblue;
 }
-main {
-    background: url(https://bogatyr.club/uploads/posts/2023-06/1687204141_bogatyr-club-p-muzhchina-v-rubashke-foni-instagram-1.jpg);
-    background-size: 100%;
+main{
+    width: 100%;
+    background-color: darkgray;
+    padding: 30px 0;
 }
-.container {
-    width: 50%;
-    margin: 50px 25%;
+.about-container{
+    width: max-content;
+    margin: 0 auto;
+    background: #fff;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    column-gap: 20px;
+}
+.about{
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
     row-gap: 30px;
+    width: 500px;
 }
-.about-header {
-    font-size: 48px;
-    font-weight: 700;
+.about-header{
     width: 100%;
-    text-align: right;
-}
-.about-text {
-    font-size: 24px;
     text-align: center;
+    font-size: 50px;
+    font-weight: 700;
+}
+.about-text{
+    margin: 0 50px;
+    text-align: justify;
+    font-size: 20px;
+}
+.about-img{
+    width: 500px;
 }
